...
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:text="@string/cells_title"
            app:admiralTextStyle="largetitle1" />

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnBaseCells"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/module_x4"
            android:paddingStart="@dimen/module_x4"
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/module_x4"
            android:paddingEnd="@dimen/module_x4">
...
