...
                android:layout_height="wrap_content"
                android:text="@string/tabs_disabled" />

        </com.admiral.uikit.components.tabs.StandardTabs>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/cellCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x6"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/module_x4"
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/cellLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/module_x4"
            android:paddingEnd="@dimen/module_x4">
...
